Prevent scrollbar cover page in IE

--- a/public/index.sass
+++ b/public/index.sass
@@ -11,6 +11,7 @@ $border-color: #999999
     background-color: $change-color !important
 
 body
+    -ms-overflow-style: scrollbar !important
     font-family: $font-family1
     background-color: $background-color
 
